# RunCompiler

./: .gitignore  CMakeLists.txt  README.md  dev_log.md  plan.md
docs/: antlr4笔记.md
docs/dev_log/: 开发日志.md
output/functional/: 00_main.sy.ll  01_var_defn2.sy.ll  02_var_defn3.sy.ll  03_arr_defn2.sy.ll  04_arr_defn3.sy.ll  05_arr_defn4.sy.ll  06_const_var_defn2.sy.ll  07_const_var_defn3.sy.ll  08_const_array_defn.sy.ll  09_func_defn.sy.ll  10_var_defn_func.sy.ll  11_add2.sy.ll  12_addc.sy.ll  13_sub2.sy.ll  14_subc.sy.ll  15_mul.sy.ll  16_mulc.sy.ll  17_div.sy.ll  18_divc.sy.ll  19_mod.sy.ll  20_rem.sy.ll  21_if_test2.sy.ll  22_if_test3.sy.ll  23_if_test4.sy.ll  24_if_test5.sy.ll  25_while_if.sy.ll  26_while_test1.sy.ll  27_while_test2.sy.ll  28_while_test3.sy.ll  29_break.sy.ll  30_continue.sy.ll  31_while_if_test1.sy.ll  32_while_if_test2.sy.ll  33_while_if_test3.sy.ll  34_arr_expr_len.sy.ll  35_op_priority1.sy.ll  36_op_priority2.sy.ll  37_op_priority3.sy.ll  38_op_priority4.sy.ll  39_op_priority5.sy.ll  (+55 more)
output/homemade/: break_in_outer_while.sy.ll
script/: generate_llvm_ir.sh  test.sh
scripts/: clean_dir_by_suffix.sh  generate_llvm_ir.sh  generate_llvm_mem2reg.sh  generate_my_asm.sh  generate_my_ir.sh  sy2cfile.sh  syfile2cfile.sh
src/: main.cpp
src/backend/: Codegen.hpp  IRVisitor.cpp  IRVisitor.hpp  Instruction.cpp  Instruction.hpp  archinfo.hpp
src/common/: common.hpp  errors.hpp  log.hpp
src/frontend/: CommonLex.g4  Lexer.g4  SysY.g4  SysYAstVisitor.cpp  SysYAstVisitor.hpp  SysYBaseVisitor.h  SysYLexer.cpp  SysYLexer.h  SysYParser.cpp  SysYParser.h  (+3 more)
(+290 files in other folders)
