project(RunCompiler)
cmake_minimum_required(VERSION 3.16)
add_compile_options(-g -std=c++17 -O2)
file(GLOB_RECURSE DIR_SRC "src/frontend/*.cpp")
file(GLOB_RECURSE DIR_LIB_SRC "third_party/*.cpp")
include_directories(src)
include_directories(third_party/antlr4-cpp-runtime)
add_executable(RunCompiler ${DIR_SRC} ${DIR_LIB_SRC})
set (EXECUTABLE_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/bin/")