project(RunCompiler)
cmake_minimum_required(VERSION 3.16)
set(CMAKE_CXX_STANDARD 17)
add_compile_options(-g -O3)
find_package(spdlog REQUIRED)
file(GLOB_RECURSE DIR_SRC "src/*.cpp")
file(GLOB_RECURSE DIR_LIB_SRC "third_party/*.cpp")
include_directories(src)
include_directories(third_party/antlr4-cpp-runtime)
add_executable(RunCompiler ${DIR_SRC} ${DIR_LIB_SRC})
target_link_libraries(RunCompiler PUBLIC spdlog::spdlog)